Fix task alignment in default card view

--- a/defCard.css
+++ b/defCard.css
@@ -94,6 +94,8 @@ body, html {
     text-align: center;
     font-size: 5vh;
     padding: 2vh;
+    margin-left: 100px;
+
 }
 .hidden{
     display: none;
